# builder-knowledge-bot-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/observations/: phase-1-findings.md
docs/plans/: phase-0-scaffolding.md
docs/superpowers/plans/: 2026-04-27-phase-1-long-context-measurement.md  2026-04-27-phase-2-basic-rag.md
docs/superpowers/specs/: 2026-04-27-phase-1-long-context-measurement-design.md  2026-04-27-phase-2-basic-rag-design.md
scripts/: measure_tokens.py
src/knowledge_bot/: ask_service.py  config.py  ingest.py  main.py  models.py  pricing.py  query.py
src/knowledge_bot/routes/: ask.py
tests/: test_ask.py  test_health.py
