[project]
name = "knowledge-bot"
version = "0.1.0"
description = "RAG-based QA over the Australian National Construction Code (NCC) — Python parallel implementation of the Java/Spring AI knowledge-bot project."
readme = "README.md"
authors = [
    { name = "Harryqin99", email = "harryqin1999@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
